# Customer_Attrition

./: README.md  app.ipynb  main.py  pyproject.toml  rf_churn_model.pkl
